--- a/app/views/customers.html
+++ b/app/views/customers.html
@@ -29,17 +29,19 @@
     </div>
     <br /><br />
     <div>
-        <table class="table table-striped table-hover table-bordered">
+        <table id="tableCustomers" class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <th class="selectable">
+                    <th>
                         <a ng-click="orderByField='firstName'; reverseSort = !reverseSort">Name</a>
                     </th>
-                    <th class="selectable">
+                    <th>
                         <a ng-click="orderByField='city'; reverseSort = !reverseSort">City</a>
                     </th>
-                    <th class="selectable">
+                    <th>
                         <a ng-click="orderByField='customer.orders.length'; reverseSort = !reverseSort">Orders</a>
+                    </th>
+                    <th>
                     </th>
                 </tr>
             </thead>
@@ -53,6 +55,9 @@
                     </td>
                     <td>
                         <a href="#/customerorders/{{customer.id}}" class="btn-link">View {{ customer.orders.length }} Orders</a>
+                    </td>
+                    <td>
+                        <a class="btn-link" ng-click="deleteCustomer(customer.id)">Delete customer</a>
                     </td>
                 </tr>
             </tbody>
